# orchx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
descriptors/: sample_containerized_saas.yaml  sample_hr_service.yaml  sample_oauth_service.yaml  sample_postgres_cluster.yaml  sample_settle_eod.yaml  sample_ssh_smoke.yaml  sample_webapp_erp.yaml
docs/: CI.md  INSTALL.md  NAMING_GUIDELINES.md  ROADMAP.md  SAMPLE_TOPOLOGIES.md  SECRETS.md  SSH.md  WEB.md  WINRM.md
examples/: run_dashboard.py  run_real_ssh.py  run_real_ssh.sh  run_real_winrm.sh
examples/run_dashboard.py/: path
scripts/: check_vendor_names.py  screenshot_dashboard.py
src/orchx/: __init__.py  secrets.py  secrets_aws.py  secrets_k8s.py  secrets_vault.py
src/orchx/cli/: app.py  render.py
src/orchx/descriptor/: __init__.py  loader.py  models.py
src/orchx/engine/: __init__.py  executor.py  models.py  planner.py
src/orchx/steps/: __init__.py  steps.py
src/orchx/transports/: __init__.py  base.py  mock.py  registry.py  ssh.py  winrm.py
src/orchx/utils/: __init__.py  logging.py
src/orchx/web/: __init__.py  app.py  auth.py  control_socket.py  dashboard.py  store.py
state/: v0.2.0.sqlite-shm  v0.2.0.sqlite-wal
tests/: conftest.py  test_cancel_signal.py  test_cli.py  test_control_socket.py  test_dag.py  test_descriptors.py  test_executor.py  test_secret_template.py  test_secrets.py  test_secrets_aws.py  test_secrets_k8s.py  test_secrets_vault.py  test_ssh_e2e.py  test_ssh_transport.py  test_state_cli.py  test_web_api.py  test_web_auth.py  test_winrm_transport.py
